Fix alignment of several sections

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,12 @@ body {
 .hero-section {
     background-color: #1F2937;
     display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.hero-text {
+    width: 40%;
 }
 
 .hero-text h1 {
@@ -49,22 +55,31 @@ body {
 }
 
 .hero-image {
-    width: 50%;
+    width: 40%;
+}
+
+.hero-button {
+    background-color: #3882F6;
+    color: white;
+    border: none;
 }
 
 .testimonial-section {
     text-align: center;
-    padding: 0 170px;
+    width: 80%;
+    align-self: center;
 }
 
 .testimonials {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .test-img {
     width: 160px;
     height: 160px;
+    border: 2px solid #3882F6;
+    border-radius: 5px;
 }
 
 .quote-section {
@@ -72,9 +87,22 @@ body {
     font-size: 36px;
     font-style: italic;
     color: #1F2937;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote-section h5 {
+    text-align: right;
+}
+
+.quote-section p, h5 {
+    width: 80%;
 }
 
 .call-section {
+    background-color: #3882F6;
+    display: flex;
 
 }
 
